--- a/AB Test Calculate Metrics .ipynb
+++ b/AB Test Calculate Metrics .ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "bfde37c2-69b4-456d-873d-32602bcd0203",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# <center>AB Test Calculate Metrics</center>\n",
     "---"
@@ -517,13 +519,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-43f2c74387cc470789a774f5e0894cb5\"></div>\n",
+       "<div id=\"altair-viz-da612dda02b1420ab27e03e8b933d084\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-43f2c74387cc470789a774f5e0894cb5\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-43f2c74387cc470789a774f5e0894cb5\");\n",
+       "    if (outputDiv.id !== \"altair-viz-da612dda02b1420ab27e03e8b933d084\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-da612dda02b1420ab27e03e8b933d084\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -716,6 +718,7 @@
     }
    ],
    "source": [
+    "# statistical description\n",
     "activity.describe()"
    ]
   },
@@ -737,13 +740,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-d8f147fc2d214c978bcbc100ac4a0ed8\"></div>\n",
+       "<div id=\"altair-viz-1e77ff5e2e2f41cc9c407e09ccf24a20\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-d8f147fc2d214c978bcbc100ac4a0ed8\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-d8f147fc2d214c978bcbc100ac4a0ed8\");\n",
+       "    if (outputDiv.id !== \"altair-viz-1e77ff5e2e2f41cc9c407e09ccf24a20\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-1e77ff5e2e2f41cc9c407e09ccf24a20\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -802,6 +805,7 @@
     }
    ],
    "source": [
+    "# plotting daily active users\n",
     "alt.Chart(activity).mark_line(size=4).encode(\n",
     "    alt.X('dt:T', axis=alt.Axis(title = 'date')),\n",
     "    alt.Y('userid:Q', axis=alt.Axis(title = 'number of users'))\n",
@@ -936,6 +940,7 @@
     }
    ],
    "source": [
+    "# data shape\n",
     "data.shape"
    ]
   },
@@ -1024,6 +1029,7 @@
     }
    ],
    "source": [
+    "# statistical description\n",
     "data.describe()"
    ]
   },
@@ -1037,12 +1043,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/61/l2cgm0251bd792ws429rg7ww0000gn/T/ipykernel_2336/4240801842.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/61/l2cgm0251bd792ws429rg7ww0000gn/T/ipykernel_2803/938876706.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  ctr = data.groupby(['dt']).mean().reset_index()\n"
      ]
     }
    ],
    "source": [
+    "# ctr per day\n",
     "ctr = data.groupby(['dt']).mean().reset_index()"
    ]
   },
@@ -1064,13 +1071,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-42b3e31f144f460f99639d36de3b91ca\"></div>\n",
+       "<div id=\"altair-viz-4d0457e423304ff78ea030289193240e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-42b3e31f144f460f99639d36de3b91ca\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-42b3e31f144f460f99639d36de3b91ca\");\n",
+       "    if (outputDiv.id !== \"altair-viz-4d0457e423304ff78ea030289193240e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-4d0457e423304ff78ea030289193240e\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -1129,6 +1136,7 @@
     }
    ],
    "source": [
+    "# plotting daily average ctr\n",
     "alt.Chart(ctr).mark_line(size=4).encode(\n",
     "    alt.X('dt:T', axis=alt.Axis(title = 'date')),\n",
     "    alt.Y('ctr:Q', axis=alt.Axis(title = 'ctr'), scale=alt.Scale(domain=[32, 34])),\n",
